[gd_scene load_steps=20 format=3 uid="uid://bh2lj13dptxfs"]

[ext_resource type="Texture2D" uid="uid://bg0jfjnk1ydye" path="res://data/ui/bg.png" id="1_wd86u"]
[ext_resource type="FontVariation" uid="uid://pgfeihyqudvk" path="res://ButtonROCKB.tres" id="2_bnm5k"]
[ext_resource type="Texture2D" uid="uid://dsif1kytqylpt" path="res://data/ui/buttonBaseSelected.png" id="3_2pbtx"]
[ext_resource type="Texture2D" uid="uid://bqimdsuslnshc" path="res://data/ui/buttonBaseUnselected.png" id="4_1glk6"]
[ext_resource type="Texture2D" uid="uid://cgetg2y7idihe" path="res://data/ui/buttonBaseActive.png" id="5_w7p3h"]
[ext_resource type="Script" path="res://data/scripts/TransitionButton.gd" id="7_myur0"]
[ext_resource type="Script" path="res://data/scripts/ResetProgressButton.gd" id="8_5snmc"]
[ext_resource type="Script" path="res://data/scripts/SettingsSliders.gd" id="9_b1r17"]
[ext_resource type="Texture2D" uid="uid://dl11j48t0xidw" path="res://data/ui/tv.png" id="10_4r4nc"]
[ext_resource type="FontFile" uid="uid://dkstlojou414g" path="res://data/rockb-aseprite14.ttf" id="10_lil0f"]
[ext_resource type="Texture2D" uid="uid://cew103v7ly8l" path="res://data/ui/tv-extended.png" id="11_15kkj"]
[ext_resource type="Texture2D" uid="uid://b02crnfdxecac" path="res://data/ui/tv-extended-bottom.png" id="12_ktafv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ve8dj"]
texture = ExtResource("3_2pbtx")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q22oa"]
texture = ExtResource("4_1glk6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lrcxy"]
texture = ExtResource("5_w7p3h")

[sub_resource type="Theme" id="Theme_5pxnh"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 26
Button/fonts/font = ExtResource("2_bnm5k")
Button/icons/icon = null
Button/styles/hover = SubResource("StyleBoxTexture_ve8dj")
Button/styles/normal = SubResource("StyleBoxTexture_q22oa")
Button/styles/pressed = SubResource("StyleBoxTexture_lrcxy")

[sub_resource type="InputEventKey" id="InputEventKey_qex42"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_u2vid"]
events = [SubResource("InputEventKey_qex42")]

[sub_resource type="LabelSettings" id="LabelSettings_uw15c"]
font = ExtResource("10_lil0f")
font_size = 36
font_color = Color(0, 0, 0, 1)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Tv" type="Sprite2D" parent="Control"]
position = Vector2(0, 0.599976)
texture = ExtResource("10_4r4nc")

[node name="Tv-extended" type="Sprite2D" parent="Control"]
position = Vector2(-1856, 3)
texture = ExtResource("11_15kkj")

[node name="Tv-extended2" type="Sprite2D" parent="Control"]
position = Vector2(1830, 1)
texture = ExtResource("11_15kkj")

[node name="Tv-extended3" type="Sprite2D" parent="Control"]
position = Vector2(-1856, -963)
texture = ExtResource("11_15kkj")

[node name="Tv-extended4" type="Sprite2D" parent="Control"]
position = Vector2(1830, -963)
texture = ExtResource("11_15kkj")

[node name="Tv-extended5" type="Sprite2D" parent="Control"]
position = Vector2(0, -963)
texture = ExtResource("11_15kkj")

[node name="Tv-extended6" type="Sprite2D" parent="Control"]
position = Vector2(-1856, 970)
texture = ExtResource("11_15kkj")

[node name="Tv-extended7" type="Sprite2D" parent="Control"]
position = Vector2(1830, 968)
texture = ExtResource("11_15kkj")

[node name="Tv-extended-bottom" type="Sprite2D" parent="Control"]
position = Vector2(-12.5, 966)
scale = Vector2(0.983854, 1)
texture = ExtResource("12_ktafv")

[node name="Bg" type="Sprite2D" parent="Control"]
texture_filter = 1
position = Vector2(0, 1)
scale = Vector2(1.00055, 1.50083)
texture = ExtResource("1_wd86u")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ReturnButton" type="Button" parent="."]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.721
anchor_top = 0.784
anchor_right = 0.976
anchor_bottom = 0.971
offset_left = 176.2
offset_top = 126.05
offset_right = 352.2
offset_bottom = 205.05
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme = SubResource("Theme_5pxnh")
theme_override_font_sizes/font_size = 19
shortcut = SubResource("Shortcut_u2vid")
text = "Return"
autowrap_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("7_myur0")
scene = "MainMenu"

[node name="ResetProgress" type="Button" parent="."]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.559
anchor_right = 0.5
anchor_bottom = 0.559
offset_left = -97.0
offset_top = 48.45
offset_right = 34.0
offset_bottom = 107.45
focus_mode = 0
theme = SubResource("Theme_5pxnh")
theme_override_font_sizes/font_size = 17
text = "Reset"
autowrap_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("8_5snmc")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.5
offset_top = -212.0
offset_right = 69.5
offset_bottom = -166.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_uw15c")

[node name="SFXVolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.261
anchor_top = 0.307
anchor_right = 0.261
anchor_bottom = 0.307
offset_left = -383.8
offset_top = -14.15
offset_right = -163.8
offset_bottom = 34.85
grow_horizontal = 2
text = "SFX Volume:"
label_settings = SubResource("LabelSettings_uw15c")

[node name="MusicVolumeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.751
anchor_top = 0.309
anchor_right = 0.751
anchor_bottom = 0.309
offset_left = -383.8
offset_top = -81.05
offset_right = -124.8
offset_bottom = -32.05
grow_horizontal = 2
text = "Music Volume:"
label_settings = SubResource("LabelSettings_uw15c")

[node name="ResetLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.261
anchor_top = 0.307
anchor_right = 0.261
anchor_bottom = 0.307
offset_left = -383.8
offset_top = 45.85
offset_right = -117.8
offset_bottom = 94.85
grow_horizontal = 2
text = "Reset Progress:"
label_settings = SubResource("LabelSettings_uw15c")

[node name="SettingsSliders" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_b1r17")

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsSliders"]
layout_mode = 0
offset_left = -147.0
offset_top = 8.0
offset_right = 39.0
offset_bottom = 24.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsSliders"]
layout_mode = 0
offset_left = -112.0
offset_top = -57.0
offset_right = 74.0
offset_bottom = -41.0
max_value = 1.0
step = 0.01
value = 1.0
